Closes #17 -- added horizontal scrolling, fixed a js prefix class from being used in css

--- a/public/css/sass/_project.scss
+++ b/public/css/sass/_project.scss
@@ -17,8 +17,13 @@ section.project {
       margin-bottom: 0;
     }
   }
-  a.js-new-item {
+  a.new-item {
     margin-right: 10px;
+  }
+  .form-inner-wrapper {
+    margin: 15px auto;
+    overflow-x: scroll;
+    overflow-y: hidden;
   }
   .types {
     .the-type {
